--- a/portfolio.html
+++ b/portfolio.html
@@ -1,65 +1,66 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en-us">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Portfolio | Your Name</title>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <title>Portfolio | Your Name</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
+  <body>
+    <header id="masthead">
+      <div class="container">
+        <a href="index.html" id="logo">Keiran Hamilton</a>
+        <nav>
+          <a href="index.html">About</a> <a href="portfolio.html">Portfolio</a>
+          <a href="contact.html">Contact</a>
+        </nav>
+      </div>
+    </header>
 
-<body>
+    <div id="main-container" class="container">
+      <section class="main-section">
+        <h1>Portfolio</h1>
 
-  <header id="masthead">
-    <div class="container">
-      <a href="index.html" id="logo">Keiran Hamilton</a>
-      <nav>
-        <a href="index.html">About</a>
-        <a href="portfolio.html">Portfolio</a>
-        <a href="contact.html">Contact</a>
-      </nav>
+        <div class="work">
+          <a href="https://keiranhamilton.github.io/word-guessing-game/">
+            <img src="Images\hangman.jpg" />
+          </a>
+          <h3>Word Guess</h3>
+        </div>
+        <div class="work">
+          <a href="https://keiranhamilton.github.io/TriviaGame/">
+            <img src="Images\trivia.jpg" />
+          </a>
+
+          <h3>Trivia Game</h3>
+        </div>
+        <div class="work">
+          <a href="https://cinegrub.com/">
+            <img
+              src="C:\Users\keiran\responsive-portfolio\Images\GroupProject_final.jpg"
+          /></a>
+
+          <h3>Cinegrub (Group Project)</h3>
+        </div>
+        <div class="work">
+          <a href="https://keiranhamilton.github.io/Train-Activity/">
+            <img src="C:\Users\keiran\responsive-portfolio\Images\train_opt.jpg"
+          /></a>
+
+          <h3>Train Scheduler</h3>
+        </div>
+        <div class="work">
+          <a href="https://keiranhamilton.github.io/unit-4-game-2/">
+            <img
+              src="C:\Users\keiran\responsive-portfolio\Images\Screenshot_20190103-114141_Chrome_opt.jpg"
+            />
+          </a>
+          <h3>Jewel Game</h3>
+        </div>
+      </section>
     </div>
-  </header>
 
-  <div id="main-container" class="container">
-    <section class="main-section">
-      <h1>Portfolio</h1>
-
-      <div class="work">
-        <img src="Images\hangman.jpg" alt="Word Guess">
-
-        <h3>Word Guess</h3>
-      </div>
-      <div class="work">
-        <img src="Images\rpg game.jpg" alt="RPG Game">
-
-        <h3>RPG Game</h3>
-      </div>
-      <div class="work">
-        <img src="Images\trivia.jpg" alt="Trivia Game">
-
-        <h3>Trivia Game</h3>
-      </div>
-      <div class="work">
-        <img src="Images\info widget.jpg" alt="Rutgers Info Widget">
-
-        <h3>Rutgers Info Widget</h3>
-      </div>
-      <div class="work">
-        <img src="Images\paperscis.png" alt="Rock Paper Scissors">
-
-        <h3>Rock Paper Scissors</h3>
-      </div>
-
-    </section>
-
-  </div>
-
-  <footer>
-    <div class="container">
-      Copyright &copy;
-    </div>
-  </footer>
-</body>
-
+    <footer><div class="container">Copyright &copy;</div></footer>
+  </body>
 </html>
