--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
       <section class="main-section">
         <h1>About Me</h1>
 
-        <img src="Images\sunset.jpg" class="auth-image" alt="Your Name" />
+        <img
+          src="C:\Users\keiran\responsive-portfolio\Images\bio pic_opt.jpg"
+          class="auth-image"
+          alt="Your Name"
+        />
 
         <p>
           My name is Keiran Hamilton and I am originally from Jacksonville, NC.
@@ -46,6 +50,6 @@
       </section>
     </div>
 
-    <footer><div class="container">Copyright &copy;</div></footer>
+    <footer><div class="container"></div></footer>
   </body>
 </html>
