--- a/portfolio.html
+++ b/portfolio.html
@@ -61,6 +61,6 @@
       </section>
     </div>
 
-    <footer><div class="container">Copyright &copy;</div></footer>
+    <footer><div class="container"></div></footer>
   </body>
 </html>
