--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
    			<div class="intro-info">
 
-   				<img src="images/profile-pic.jpg" width="200" height="40"  alt="Profile Picture">
+   				<img src="Images\profile-pic.jpg" width="200" height="40"  alt="Profile Picture">
 
    				<p class="lead"> I am a full stack web developer out of the UNC bootcamp. I am both
 						driven and self motivated.
