working on project apps

--- a/index.html
+++ b/index.html
@@ -199,19 +199,19 @@
 						<div class="row">
 							<div class="col-md-3">
 								<a href="https://keiranhamilton.github.io/word-guessing-game/">
-									<img src="Images\hangman.jpg" />
+									<img src="Images\hangman.jp" />
 								</a>
 								<h3>Word Guess</h3>
 							</div>
 							<div class="col-md-3">
 								<a href="https://keiranhamilton.github.io/TriviaGame/">
-									<img src="C:\Users\keiran\responsive-portfolio\Images\trivia.jpg" />
+									<img src="Images\trivia.jpg" />
 								</a>
 								<h3>Trivia Game</h3>
 							</div>
 							<div class="col-md-3">
 								<a href="https://cinegrub.com/">
-									<img src="C:\Users\keiran\responsive-portfolio\Images\GroupProject_final.jpg"
+									<img src="Images\GroupProject_final.jpg"
 								/></a>
 						<h3>Cinegrub (Group Project)</h3>
 							</div>
@@ -221,14 +221,14 @@
 					<div class="row">
 						<div class="col-md-3">
 							<a href="https://keiranhamilton.github.io/Train-Activity/">
-								<img src="C:\Users\keiran\responsive-portfolio\Images\train_opt.jpg"
+								<img src="Images\train_opt.jpg"
 							/></a>
 							<h3>Train Scheduler</h3>
 						</div>
 						<div class="col-md-3">
 							<a href="https://keiranhamilton.github.io/unit-4-game-2/">
 								<img
-									src="C:\Users\keiran\responsive-portfolio\Images\Screenshot_20190103-114141_Chrome_opt.jpg"
+									src="Images\Screenshot_20190103-114141_Chrome_opt.jpg"
 								/>
 							</a>
 							<h3>Jewel Counting Game</h3>
