--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 						<div class="row">
 							<div class="col-md-3">
 								<a href="https://keiranhamilton.github.io/word-guessing-game/">
-									<img src="Images\hangman.jp" />
+									<img src="Images\hangman.jpg" />
 								</a>
 								<h3>Word Guess</h3>
 							</div>
