--- a/index.html
+++ b/index.html
@@ -350,13 +350,13 @@
 		
 
 			<blockquote cite="http://where-i-got-my-info-from.com">
-				<p>Your work is going to fill a large part of your life, and the only way to be truly satisfied is
+				<p id = "quote">Your work is going to fill a large part of your life, and the only way to be truly satisfied is
 				to do what you believe is great work. And the only way to do great work is to love what you do.
 				If you haven't found it yet, keep looking. Don't settle. As with all matters of the heart, you'll know when you find it.
 				</p>
 	
 				<cite>
-					<a href="#">Steve Jobs</a>
+					<a href="#" id= "quote">Steve Jobs</a>
 				</cite>
 			</blockquote>
 
