--- a/index.html
+++ b/index.html
@@ -101,10 +101,9 @@
    				<img src="Images\profile-pic2.jpg" width="200" height="40"  alt="Profile Picture">
 
    				<p class="lead"> I am a certified full stack web developer out of the UNC-Chapel Hill program. I am focused,
-						driven, and self motivated.
+						ambitious, and self motivated.
 						I enjoy coding and the limitless possibilities it presents. You can
-						basically construct anything that your mind can conjure up. Im looking
-						forward to starting my career in web development. 
+						basically construct anything that your mind can conjure up. Im excited about being in the deployment phase of my next journey. 
 						I have a passion for learning new technologies,
 						languages and techniques.</p>
    			</div>   			
