--- a/index.html
+++ b/index.html
@@ -78,8 +78,7 @@
    	<ul class="intro-social">        
 				
 				<li><a href="https://github.com/KeiranHamilton?"><i class="fab fa-github"></i></a></li>
-         <li><a href="https://keiranhamilton@gmail.com"><i class="fab fa-google"></i></a></li>
-         <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+        
          <li><a href="https://www.linkedin.com/in/keiran-hamilton-4802a3171/"><i class="fab fa-linkedin"></i></a></li>
         </ul> <!-- /intro-social -->      	
 
@@ -300,7 +299,7 @@
    		<div class="col-twelve">
 				<form
 				method="POST"
-				action= "https://formspree.io/email@domain.tld" 	
+				action= "https://formspree.io/keiranhamilton@gmail.com" 	
 				id="formspree"
 			>
 				<div id="formOutline">
