--- a/index.html
+++ b/index.html
@@ -268,9 +268,9 @@
 			<h3>M.E.R.N. Google Books</h3>
 		</div>
 		<div class="col-md-3">
-			<a href="http://streamer.connerleigh.com/"></a>
-				<img src="Images\streamer.jpg" 
-			>
+			<a href="http://streamer.connerleigh.com/">
+				<img src="Images\streamer.jpg" />
+			</a>
 	<h3>Streamer (Group Project) </h3>
 		</div>
 	</div>
